correction shift

--- a/html/app/styles/core/base.less
+++ b/html/app/styles/core/base.less
@@ -1129,18 +1129,19 @@ button{
                             text-decoration: none;
                             display: inline-block;
                             color : @blanc;
-                            transform : rotateY(0deg);
-                            -webkit-transform : rotateY(0deg);
-
-                            .transition(transform 0.3s ease-out);
-                            z-index: 100;
-                            position: relative;
+                            span{
+                                display: inline-block;
+                                transform : rotateY(0deg);
+                                .transition(transform 0.3s ease-out);
+                            }
                             &:hover{
                                 color: @rose;
-                                transform : rotateY(180deg);
-                                -webkit-transform : rotateY(180deg);
-                                .transition(transform 0.3s ease-out);
-
+                            }
+                            &.spin{
+                                span{
+                                    transform : rotateY(180deg);
+                                    .transition(transform 0.3s ease-out);
+                                }
                             }
                         }
                     }
